--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.2",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-cssnano": "^2.1.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade-php": "^2.0.0-0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.1.0",
+    "gulp-remove-code": "^1.0.2",
+    "gulp-remove-html": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-svg-sprites": "^4.0.2",
+    "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-uncss": "^1.0.6",
     "imagemin-pngquant": "^4.2.2"
